writing index.css and index.html

--- a/index.html
+++ b/index.html
@@ -2,19 +2,40 @@
 <html lang="en">
 
 <head>
-  <title>Система комментирования на JS + Typescript</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./index.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Система комментирования на JS + Typescript</title>
+  <link rel="stylesheet"  type="text/css" href="./index.css" />
   <style>
 
   </style>
 </head>
 
 <body>
+  <header class="header">
+    <div class="wrap header-wrap">
+      
+    </div>
+  </header> 
 
+  <main class="main">
+    <aside class="aside">
+      <div class="wrap aside-wrap">
+
+      </div>
+    </aside>
+    <section
+
+  </main>
+    
+  <footer>
+
+  </footer>
+   
  
 
-  <script type="module" src="./index.js"></script>
+  <!--<script type="module" src="./index.js"></script>-->
 </body>
 
 </html>
